--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
   <div class="wrap">
     <h1>Block Blast — UI + Solver</h1>
-    <p class="sub">Solver đặt trực tiếp lên bàn chính. Hàng/cột đầy sẽ vàng 🟨 rồi biến mất ở lượt sau.</p>
+    <p class="sub">Solver đặt trực tiếp lên bàn chính. Hàng/cột đầy → chuyển vàng 🟨, biến mất ở lượt sau.</p>
 
     <div class="row cols-2">
       <div class="card">
@@ -71,7 +71,7 @@
         <div id="grid8" class="grid8"></div>
         <div class="bar">
           <button class="btn" id="solveBtn">Solve</button>
-          <button class="btn" id="fastSolveBtn">Solve nhanh</button>
+          <button class="btn" id="fastBtn">Solve nhanh</button>
           <button class="btn-ghost" id="stepBtn">Step-by-step</button>
           <button class="btn-ghost" id="clearGrid">Clear grid</button>
           <button class="btn-danger" id="resetAll">Reset tất cả</button>
@@ -82,7 +82,7 @@
           <span><span class="dot d-piece1"></span>Figure 1</span>
           <span><span class="dot d-piece2"></span>Figure 2</span>
           <span><span class="dot d-piece3"></span>Figure 3</span>
-          <span><span class="dot" style="background:#facc15"></span>Cleared</span>
+          <span><span class="dot" style="background:#facc15"></span>Cleared (vàng)</span>
         </div>
       </div>
 
@@ -90,7 +90,6 @@
         <div class="section-title">3 khối 5×5</div>
         <div class="tool">
           <label class="switch"><input type="checkbox" id="allowRot" checked> Cho phép xoay 90°</label>
-          <span class="small">Mẹo: giữ <span class="kbd">Shift</span> khi click để tô/xoá một vệt.</span>
         </div>
         <div class="figs">
           <div class="fig">
@@ -134,7 +133,7 @@
   </div>
 
   <script>
-    // build grids
+    // build grid
     function buildGrid(el, rows, cols){
       el.innerHTML=''
       const cells=[]
@@ -149,12 +148,12 @@
       }
       return cells
     }
-    const grid8 = buildGrid(document.getElementById('grid8'),8,8)
-    const fig1 = buildGrid(document.getElementById('fig1'),5,5)
-    const fig2 = buildGrid(document.getElementById('fig2'),5,5)
-    const fig3 = buildGrid(document.getElementById('fig3'),5,5)
+    const grid8=buildGrid(document.getElementById('grid8'),8,8)
+    const fig1=buildGrid(document.getElementById('fig1'),5,5)
+    const fig2=buildGrid(document.getElementById('fig2'),5,5)
+    const fig3=buildGrid(document.getElementById('fig3'),5,5)
 
-    // toggle
+    // toggle cell
     function toggleCell(ev){
       const el=ev.target
       if(!el.classList.contains('cell')) return
@@ -167,16 +166,10 @@
     document.getElementById('fig3').addEventListener('click',toggleCell)
 
     // presets
-    const presets={ I:[[0,0],[1,0],[2,0],[3,0]],
-      L:[[0,0],[0,1],[0,2],[1,2]],
-      T:[[0,0],[1,0],[2,0],[1,1]],
-      O:[[0,0],[1,0],[0,1],[1,1]],
-      S:[[1,0],[2,0],[0,1],[1,1]],
-      Z:[[0,0],[1,0],[1,1],[2,1]],
-      DOT3:[[0,0],[1,0],[2,0]],
-      DOT2:[[0,0],[1,0]],
-      CLEAR:[]
-    }
+    const presets={I:[[0,0],[1,0],[2,0],[3,0]],L:[[0,0],[0,1],[0,2],[1,2]],
+      T:[[0,0],[1,0],[2,0],[1,1]],O:[[0,0],[1,0],[0,1],[1,1]],
+      S:[[1,0],[2,0],[0,1],[1,1]],Z:[[0,0],[1,0],[1,1],[2,1]],
+      DOT3:[[0,0],[1,0],[2,0]],DOT2:[[0,0],[1,0]],CLEAR:[]}
     function applyPreset(targetId,key){
       const root=document.getElementById(targetId)
       ;[...root.children].forEach(c=>c.classList.remove('on'))
@@ -189,7 +182,7 @@
       btn.addEventListener('click',()=>applyPreset(btn.dataset.target,btn.dataset.fill))
     })
 
-    // read functions
+    // read board
     function readBoard(){
       const a=[]
       for(let r=0;r<8;r++){
@@ -203,15 +196,16 @@
     }
     function readFigure(figRoot){
       const pts=[]
-      for(let y=0;y<5;y++) for(let x=0;x<5;x++)
-        if(figRoot[y*5+x].classList.contains('on')) pts.push([x,y])
+      for(let y=0;y<5;y++){
+        for(let x=0;x<5;x++){
+          if(figRoot[y*5+x].classList.contains('on')) pts.push([x,y])
+        }
+      }
       return pts
     }
 
-    // draw results
-    function clearMainVisual(){ grid8.forEach(c=>c.className='cell') }
+    // keep existing cells, only add solver placements
     function drawToMainBoard(steps){
-      clearMainVisual()
       steps.forEach(s=>{
         s.shape.forEach(([x,y])=>{
           const gx=s.ox+x, gy=s.oy+y
@@ -220,60 +214,50 @@
         })
       })
       steps.forEach(s=>{
-        if(s.fullRows) s.fullRows.forEach(r=>{ for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared') })
-        if(s.fullCols) s.fullCols.forEach(col=>{ for(let r=0;r<8;r++) grid8[r*8+col].classList.add('cleared') })
+        if(s.fullRows) s.fullRows.forEach(r=>{
+          for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared')
+        })
+        if(s.fullCols) s.fullCols.forEach(col=>{
+          for(let r=0;r<8;r++) grid8[r*8+col].classList.add('cleared')
+        })
       })
     }
+
     function removeClearedVisual(){
       const clearedCells=[...grid8].filter(c=>c.classList.contains('cleared'))
       clearedCells.forEach(c=>c.classList.add('fadeout'))
-      setTimeout(()=>{ clearedCells.forEach(c=>c.classList.remove('fadeout','cleared','on','piece1','piece2','piece3')) },900)
+      setTimeout(()=>{
+        clearedCells.forEach(c=>{
+          c.className='cell'
+        })
+      },900)
     }
 
-    // clear/reset
-    document.getElementById('clearGrid').onclick=()=>grid8.forEach(c=>c.className='cell')
-    document.getElementById('clearFigs').onclick=()=>[fig1,fig2,fig3].forEach(f=>f.forEach(c=>c.classList.remove('on')))
+    // buttons
+    document.getElementById('clearGrid').onclick=()=>{ grid8.forEach(c=>c.className='cell') }
+    document.getElementById('clearFigs').onclick=()=>{ [fig1,fig2,fig3].forEach(f=>f.forEach(c=>c.classList.remove('on'))) }
     document.getElementById('resetAll').onclick=()=>{ document.getElementById('clearGrid').onclick(); document.getElementById('clearFigs').onclick() }
 
-    // --- Web Worker ---
+    // worker
     const worker=new Worker('solver-worker.js')
     worker.onmessage=(ev)=>{
       const {type,res,t0,t1}=ev.data
-      if(!res){ document.getElementById('status').innerText='Không tìm được phương án.'; return }
-      if(type==="stepSolve"){
-        document.getElementById('status').innerText='Đang phát từng bước...'
-        clearMainVisual()
-        ;(async()=>{
-          for(let i=0;i<(res.steps?.length||0);i++){
-            const s=res.steps[i]
-            s.shape.forEach(([x,y])=>{
-              const gx=s.ox+x, gy=s.oy+y
-              grid8[gy*8+gx].classList.add('on','piece'+s.shapeId)
-            })
-            if(s.fullRows) s.fullRows.forEach(r=>{ for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared') })
-            if(s.fullCols) s.fullCols.forEach(col=>{ for(let r=0;r<8;r++) grid8[r*8+col].classList.add('cleared') })
-            await new Promise(resv=>setTimeout(resv,550))
-          }
-          setTimeout(()=>removeClearedVisual(),900)
-          document.getElementById('status').innerText=`Phát xong — tổng xoá: ${res.totalCleared||0}`
-        })()
-      } else {
-        document.getElementById('status').innerHTML=`Tổng xoá: <b>${res.totalCleared||0}</b> • ${(t1-t0).toFixed(1)}ms`
-        drawToMainBoard(res.steps||[])
-        setTimeout(()=>removeClearedVisual(),1600)
-      }
+      if(!res){document.getElementById('status').innerText='Không tìm được phương án.';return}
+      document.getElementById('status').innerHTML=`Tổng xoá: <b>${res.totalCleared||0}</b> • Thời gian: <b>${(t1-t0).toFixed(1)}ms</b>`
+      drawToMainBoard(res.steps||[])
+      setTimeout(()=>removeClearedVisual(),1600)
     }
 
-    function runSolver(mode){
+    function sendToWorker(type){
       const board=readBoard()
       const shapes=[readFigure(fig1),readFigure(fig2),readFigure(fig3)]
       const allowRot=document.getElementById('allowRot').checked
-      worker.postMessage({type:mode,board,shapes,allowRot,t0:performance.now()})
+      worker.postMessage({type,board,shapes,allowRot,t0:performance.now()})
     }
 
-    document.getElementById('solveBtn').onclick=()=>runSolver("solve")
-    document.getElementById('fastSolveBtn').onclick=()=>runSolver("fastSolve")
-    document.getElementById('stepBtn').onclick=()=>runSolver("stepSolve")
+    document.getElementById('solveBtn').onclick=()=>sendToWorker('solve')
+    document.getElementById('fastBtn').onclick=()=>sendToWorker('fastSolve')
+    document.getElementById('stepBtn').onclick=()=>sendToWorker('stepSolve')
   </script>
 </body>
 </html>
