--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
     .fig{display:flex;flex-direction:column;align-items:center;gap:8px}
     label{font-size:14px;color:#374151}
     .tool{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin:8px 0}
-    .out{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:12px}
-    .thumb{padding:12px;border-radius:12px;border:1px solid #e5e7eb}
-    .thumb h4{margin:0 0 6px;font-size:14px}
     .legend{display:flex;gap:10px;justify-content:center;margin-top:6px;flex-wrap:wrap}
     .dot{width:12px;height:12px;border-radius:3px;display:inline-block;vertical-align:middle;margin-right:6px}
     .d-empty{background:#e9edfd;border:1px solid #dbe1ff}
@@ -61,13 +58,11 @@
     .switch{display:inline-flex;gap:8px;align-items:center}
     input[type="checkbox"]{width:16px;height:16px}
     .small{font-size:12px;color:#6b7280}
-    .foot{margin-top:8px;color:#6b7280;font-size:12px}
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>Block Blast — UI + Solver</h1>
-    <p class="sub">Solver đặt trực tiếp lên bàn chính. Hàng/cột đầy sẽ vàng 🟨 rồi biến mất ở lượt sau.</p>
     <p class="sub">Solver đặt trực tiếp lên bàn chính. Hàng/cột đầy → chuyển vàng 🟨, biến mất ở lượt sau.</p>
 
     <div class="row cols-2">
@@ -76,16 +71,17 @@
         <div id="grid8" class="grid8"></div>
         <div class="bar">
           <button class="btn" id="solveBtn">Solve</button>
-          <button class="btn" id="fastSolveBtn">Solve nhanh</button>
           <button class="btn" id="fastBtn">Solve nhanh</button>
           <button class="btn-ghost" id="stepBtn">Step-by-step</button>
           <button class="btn-ghost" id="clearGrid">Clear grid</button>
           <button class="btn-danger" id="resetAll">Reset tất cả</button>
-@@ -82,15 +82,14 @@ <h1>Block Blast — UI + Solver</h1>
+        </div>
+        <div class="legend">
+          <span><span class="dot d-grid"></span>Ô đã có gạch</span>
+          <span><span class="dot d-empty"></span>Ô trống</span>
           <span><span class="dot d-piece1"></span>Figure 1</span>
           <span><span class="dot d-piece2"></span>Figure 2</span>
           <span><span class="dot d-piece3"></span>Figure 3</span>
-          <span><span class="dot" style="background:#facc15"></span>Cleared</span>
           <span><span class="dot" style="background:#facc15"></span>Cleared (vàng)</span>
         </div>
       </div>
@@ -94,51 +90,82 @@
         <div class="section-title">3 khối 5×5</div>
         <div class="tool">
           <label class="switch"><input type="checkbox" id="allowRot" checked> Cho phép xoay 90°</label>
-          <span class="small">Mẹo: giữ <span class="kbd">Shift</span> khi click để tô/xoá một vệt.</span>
         </div>
         <div class="figs">
           <div class="fig">
-@@ -134,7 +133,7 @@ <h1>Block Blast — UI + Solver</h1>
+            <label>Figure 1</label>
+            <div id="fig1" class="grid5"></div>
+            <div class="bar">
+              <button class="btn-ghost" data-fill="I" data-target="fig1">I</button>
+              <button class="btn-ghost" data-fill="L" data-target="fig1">L</button>
+              <button class="btn-ghost" data-fill="T" data-target="fig1">T</button>
+            </div>
+          </div>
+          <div class="fig">
+            <label>Figure 2</label>
+            <div id="fig2" class="grid5"></div>
+            <div class="bar">
+              <button class="btn-ghost" data-fill="O" data-target="fig2">O</button>
+              <button class="btn-ghost" data-fill="S" data-target="fig2">S</button>
+              <button class="btn-ghost" data-fill="Z" data-target="fig2">Z</button>
+            </div>
+          </div>
+          <div class="fig">
+            <label>Figure 3</label>
+            <div id="fig3" class="grid5"></div>
+            <div class="bar">
+              <button class="btn-ghost" data-fill="DOT3" data-target="fig3">3-dot</button>
+              <button class="btn-ghost" data-fill="DOT2" data-target="fig3">2-dot</button>
+              <button class="btn-ghost" data-fill="CLEAR" data-target="fig3">Clear</button>
+            </div>
+          </div>
+        </div>
+        <div class="bar" style="margin-top:8px">
+          <button class="btn-ghost" id="clearFigs">Clear 3 khối</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card" style="margin-top:16px">
+      <div class="section-title">Kết quả</div>
+      <div id="status" class="status">Chưa chạy.</div>
+    </div>
   </div>
 
   <script>
-    // build grids
     // build grid
     function buildGrid(el, rows, cols){
       el.innerHTML=''
       const cells=[]
-@@ -149,12 +148,12 @@ <h1>Block Blast — UI + Solver</h1>
+      for(let r=0;r<rows;r++){
+        for(let c=0;c<cols;c++){
+          const d=document.createElement('div')
+          d.className='cell'
+          d.dataset.r=r; d.dataset.c=c
+          el.appendChild(d)
+          cells.push(d)
+        }
       }
       return cells
     }
-    const grid8 = buildGrid(document.getElementById('grid8'),8,8)
-    const fig1 = buildGrid(document.getElementById('fig1'),5,5)
-    const fig2 = buildGrid(document.getElementById('fig2'),5,5)
-    const fig3 = buildGrid(document.getElementById('fig3'),5,5)
     const grid8=buildGrid(document.getElementById('grid8'),8,8)
     const fig1=buildGrid(document.getElementById('fig1'),5,5)
     const fig2=buildGrid(document.getElementById('fig2'),5,5)
     const fig3=buildGrid(document.getElementById('fig3'),5,5)
 
-    // toggle
     // toggle cell
     function toggleCell(ev){
       const el=ev.target
       if(!el.classList.contains('cell')) return
-@@ -167,16 +166,10 @@ <h1>Block Blast — UI + Solver</h1>
+      el.classList.toggle('on')
+      el.classList.remove('piece1','piece2','piece3','cleared','fadeout')
+    }
+    document.getElementById('grid8').addEventListener('click',toggleCell)
+    document.getElementById('fig1').addEventListener('click',toggleCell)
+    document.getElementById('fig2').addEventListener('click',toggleCell)
     document.getElementById('fig3').addEventListener('click',toggleCell)
 
     // presets
-    const presets={ I:[[0,0],[1,0],[2,0],[3,0]],
-      L:[[0,0],[0,1],[0,2],[1,2]],
-      T:[[0,0],[1,0],[2,0],[1,1]],
-      O:[[0,0],[1,0],[0,1],[1,1]],
-      S:[[1,0],[2,0],[0,1],[1,1]],
-      Z:[[0,0],[1,0],[1,1],[2,1]],
-      DOT3:[[0,0],[1,0],[2,0]],
-      DOT2:[[0,0],[1,0]],
-      CLEAR:[]
-    }
     const presets={I:[[0,0],[1,0],[2,0],[3,0]],L:[[0,0],[0,1],[0,2],[1,2]],
       T:[[0,0],[1,0],[2,0],[1,1]],O:[[0,0],[1,0],[0,1],[1,1]],
       S:[[1,0],[2,0],[0,1],[1,1]],Z:[[0,0],[1,0],[1,1],[2,1]],
@@ -146,21 +173,29 @@
     function applyPreset(targetId,key){
       const root=document.getElementById(targetId)
       ;[...root.children].forEach(c=>c.classList.remove('on'))
-@@ -189,7 +182,7 @@ <h1>Block Blast — UI + Solver</h1>
+      presets[key].forEach(([x,y])=>{
+        const idx=y*5+x
+        root.children[idx]?.classList.add('on')
+      })
+    }
+    document.querySelectorAll('[data-fill]').forEach(btn=>{
       btn.addEventListener('click',()=>applyPreset(btn.dataset.target,btn.dataset.fill))
     })
 
-    // read functions
     // read board
     function readBoard(){
       const a=[]
       for(let r=0;r<8;r++){
-@@ -203,15 +196,16 @@ <h1>Block Blast — UI + Solver</h1>
+        const row=[]
+        for(let c=0;c<8;c++){
+          row.push(grid8[r*8+c].classList.contains('on')?1:0)
+        }
+        a.push(row)
+      }
+      return a
     }
     function readFigure(figRoot){
       const pts=[]
-      for(let y=0;y<5;y++) for(let x=0;x<5;x++)
-        if(figRoot[y*5+x].classList.contains('on')) pts.push([x,y])
       for(let y=0;y<5;y++){
         for(let x=0;x<5;x++){
           if(figRoot[y*5+x].classList.contains('on')) pts.push([x,y])
@@ -169,20 +204,16 @@
       return pts
     }
 
-    // draw results
-    function clearMainVisual(){ grid8.forEach(c=>c.className='cell') }
     // keep existing cells, only add solver placements
     function drawToMainBoard(steps){
-      clearMainVisual()
       steps.forEach(s=>{
         s.shape.forEach(([x,y])=>{
           const gx=s.ox+x, gy=s.oy+y
-@@ -220,60 +214,50 @@ <h1>Block Blast — UI + Solver</h1>
+          const el=grid8[gy*8+gx]
+          el.classList.add('on','piece'+s.shapeId)
         })
       })
       steps.forEach(s=>{
-        if(s.fullRows) s.fullRows.forEach(r=>{ for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared') })
-        if(s.fullCols) s.fullCols.forEach(col=>{ for(let r=0;r<8;r++) grid8[r*8+col].classList.add('cleared') })
         if(s.fullRows) s.fullRows.forEach(r=>{
           for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared')
         })
@@ -195,7 +226,6 @@
     function removeClearedVisual(){
       const clearedCells=[...grid8].filter(c=>c.classList.contains('cleared'))
       clearedCells.forEach(c=>c.classList.add('fadeout'))
-      setTimeout(()=>{ clearedCells.forEach(c=>c.classList.remove('fadeout','cleared','on','piece1','piece2','piece3')) },900)
       setTimeout(()=>{
         clearedCells.forEach(c=>{
           c.className='cell'
@@ -203,64 +233,31 @@
       },900)
     }
 
-    // clear/reset
-    document.getElementById('clearGrid').onclick=()=>grid8.forEach(c=>c.className='cell')
-    document.getElementById('clearFigs').onclick=()=>[fig1,fig2,fig3].forEach(f=>f.forEach(c=>c.classList.remove('on')))
     // buttons
     document.getElementById('clearGrid').onclick=()=>{ grid8.forEach(c=>c.className='cell') }
     document.getElementById('clearFigs').onclick=()=>{ [fig1,fig2,fig3].forEach(f=>f.forEach(c=>c.classList.remove('on'))) }
     document.getElementById('resetAll').onclick=()=>{ document.getElementById('clearGrid').onclick(); document.getElementById('clearFigs').onclick() }
 
-    // --- Web Worker ---
     // worker
     const worker=new Worker('solver-worker.js')
     worker.onmessage=(ev)=>{
       const {type,res,t0,t1}=ev.data
-      if(!res){ document.getElementById('status').innerText='Không tìm được phương án.'; return }
-      if(type==="stepSolve"){
-        document.getElementById('status').innerText='Đang phát từng bước...'
-        clearMainVisual()
-        ;(async()=>{
-          for(let i=0;i<(res.steps?.length||0);i++){
-            const s=res.steps[i]
-            s.shape.forEach(([x,y])=>{
-              const gx=s.ox+x, gy=s.oy+y
-              grid8[gy*8+gx].classList.add('on','piece'+s.shapeId)
-            })
-            if(s.fullRows) s.fullRows.forEach(r=>{ for(let c=0;c<8;c++) grid8[r*8+c].classList.add('cleared') })
-            if(s.fullCols) s.fullCols.forEach(col=>{ for(let r=0;r<8;r++) grid8[r*8+col].classList.add('cleared') })
-            await new Promise(resv=>setTimeout(resv,550))
-          }
-          setTimeout(()=>removeClearedVisual(),900)
-          document.getElementById('status').innerText=`Phát xong — tổng xoá: ${res.totalCleared||0}`
-        })()
-      } else {
-        document.getElementById('status').innerHTML=`Tổng xoá: <b>${res.totalCleared||0}</b> • ${(t1-t0).toFixed(1)}ms`
-        drawToMainBoard(res.steps||[])
-        setTimeout(()=>removeClearedVisual(),1600)
-      }
       if(!res){document.getElementById('status').innerText='Không tìm được phương án.';return}
       document.getElementById('status').innerHTML=`Tổng xoá: <b>${res.totalCleared||0}</b> • Thời gian: <b>${(t1-t0).toFixed(1)}ms</b>`
       drawToMainBoard(res.steps||[])
       setTimeout(()=>removeClearedVisual(),1600)
     }
 
-    function runSolver(mode){
     function sendToWorker(type){
       const board=readBoard()
       const shapes=[readFigure(fig1),readFigure(fig2),readFigure(fig3)]
       const allowRot=document.getElementById('allowRot').checked
-      worker.postMessage({type:mode,board,shapes,allowRot,t0:performance.now()})
       worker.postMessage({type,board,shapes,allowRot,t0:performance.now()})
     }
 
-    document.getElementById('solveBtn').onclick=()=>runSolver("solve")
-    document.getElementById('fastSolveBtn').onclick=()=>runSolver("fastSolve")
-    document.getElementById('stepBtn').onclick=()=>runSolver("stepSolve")
     document.getElementById('solveBtn').onclick=()=>sendToWorker('solve')
     document.getElementById('fastBtn').onclick=()=>sendToWorker('fastSolve')
     document.getElementById('stepBtn').onclick=()=>sendToWorker('stepSolve')
   </script>
 </body>
-</html>
 </html>
